Added styling of the article page

--- a/theme/src/_logos.scss
+++ b/theme/src/_logos.scss
@@ -1,10 +1,11 @@
 .logos {
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    background: $white;
 
     img {
         max-height: rem-calc(50);
