--- a/theme/src/theme.scss
+++ b/theme/src/theme.scss
@@ -24,6 +24,8 @@ a {
 /* Generic styles */
 @import 'snippet';
 @import 'logos';
+@import 'header';
 
 /* Page-specific styles */
 @import 'landing';
+@import 'article';
