--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -2,29 +2,38 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>Stein&middot;reich</title>
+  <title>{{ article.title }}</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|GFS+Neohellenic|Merriweather:300&display=swap"/>
   <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/theme.css"/>
 </head>
-<body class="landing">
+<body class="article">
+  <header>
+    <nav class="grid-x">
+      <ul class="cell small-12 medium-shrink menu">
+        <li><a href="{{ SITEURL }}/">Stein&middot;reich</a></li>
+      </ul>
+      <ul class="cell small-12 medium-auto menu">
+        <li><a href="#">Raumplan</a></li>
+        <li><a href="#">Themen</a></li>
+        <li><a href="#">Entdecken</a></li>
+      </ul>
+    </nav>
+  </header>
   <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="cell small-12 medium-6 grid-y">
-        <h1 class="cell greek">πέτρα&middot;πλούσιος</h1>
-        <ul class="cell menu">
-          <li><a href="">Raumplan</a></li>
-          <li><a href="">Themen</a></li>
-          <li><a href="">Entdecken</a></li>
-        </ul>
-        <h1 class="cell">Stein&middot;reich</h1>
-        <ul class="cell menu">
-          <li><a href="">Raumplan</a></li>
-          <li><a href="">Themen</a></li>
-          <li><a href="">Entdecken</a></li>
-        </ul>
-        <h1 class="cell">lapis&middot;dives</h1>
+    <div class="grid-x">
+      <div class="cell small-12 large-9 grid-y texts">
+        <h1>{{ article.title }}</h1>
+        {{ article.content }}
       </div>
-      <div class="cell small-12 medium-6">
+      <div class="cell small-12 large-3 metadata">
+        <ul class="menu vertical">
+          <li><a href="{{ article.category.url }}">{{ article.category }}</a></li>
+          {% for tag in article.tags %}
+            <li><a href="{{ tag.url }}">{{ tag | escape }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="cell small-12 large-9 images">
         <div class="orbit" role="region" aria-label="Stone Samples" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
           <ul class="orbit-container">
             <li class="orbit-slide is-active">
@@ -75,6 +84,30 @@
   <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/scripts.js"></script>
   <script>
   $(document).foundation();
+  </script>
+  <script>
+  /*var goToLandingTimeout;
+  function goToLanding() {
+      window.location = '/';
+  }
+  function cancelGoToLanding() {
+      clearTimeout(goToLandingTimeout)
+      goToLandingTimeout = setTimeout(goToLanding, 300000);
+  }
+  goToLandingTimeout = setTimeout(goToLanding, 300000);
+  $(document).on('mousemove', cancelGoToLanding).on('keyup', cancelGoToLanding);;*/
+  </script>
+  <script>
+  const html = document.querySelector('html');
+  const body = document.querySelector('body');
+  const baseHeader = document.querySelector('header');
+  window.addEventListener('scroll', function(ev) {
+      if (html.scrollTop == 0) {
+          body.classList.remove('scrolling');
+      } else {
+          body.classList.add('scrolling');
+      }
+  });
   </script>
 </body>
 </html>
