--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8"/>
-  <title>Stein&middot;reich</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|GFS+Neohellenic|Merriweather:300&display=swap"/>
-  <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/theme.css"/>
-</head>
+{% extends "base.html" %}
+
+{% block head %}
+<title>Stein&middot;reich</title>
+{% endblock head %}
+
+{% block body %}
 <body class="landing">
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
@@ -77,4 +76,4 @@
   $(document).foundation();
   </script>
 </body>
-</html>
+{% endblock body %}
