--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   {% block head %}{% endblock head %}
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|GFS+Neohellenic|Merriweather:300&display=swap"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|GFS+Neohellenic|Merriweather:300&amp;display=swap"/>
   <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/theme.css"/>
   <link rel="icon" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/imgs/favicon.ico" type="image/x-icon">
 </head>
