--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -15,6 +15,7 @@
       </div>
       <div class="cell small-12 large-3 metadata">
         <ul class="menu vertical">
+          <li><a href="{{ article.category.url }}">{{ article.category }}</a></li>
           {% for tag in article.tags %}
             <li><a href="{{ tag.url }}">{{ tag | escape }}</a></li>
           {% endfor %}
