--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -24,7 +24,7 @@
         <h1 class="cell">lapis&middot;dives</h1>
       </div>
       <div class="cell small-12 medium-6">
-        <div class="orbit" role="region" aria-label="Stone Samples" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+        <div class="orbit snippet" role="region" aria-label="Stone Samples" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
           <ul class="orbit-container">
             <li class="orbit-slide is-active">
               <figure class="orbit-figure">
