--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -21,48 +21,25 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="cell small-12 large-9 images">
-        <div class="orbit" role="region" aria-label="Stone Samples" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
-          <ul class="orbit-container">
-            <li class="orbit-slide is-active">
-              <figure class="orbit-figure">
-                <a href="">
-                  <img class="orbit-image" src="https://proxy.europeana.eu/2022608/SUM_SUM_01433?api_url=https%3A%2F%2Fapi.europeana.eu%2Fapi&view=http%3A%2F%2Fmm.dimu.no%2Fimage%2F012uL2kRFSe2%3Fdimension%3D800x800" alt="Photo of a stone">
-                  <figcaption class="orbit-caption">
-                    <span>moturaque duros verba queror silices</span>
-                    <span>ich klage mit Worten, die harte Steine erweichen könnten.</span>
-                    <span>Ov. met. 9, 303</span>
-                  </figcaption>
-                </a>
-              </figure>
-            </li>
-            <li class="orbit-slide">
-              <figure class="orbit-figure">
-                <a href="">
-                  <img class="orbit-image" src="https://proxy.europeana.eu/2022608/SUM_SUM_00291?api_url=https%3A%2F%2Fapi.europeana.eu%2Fapi&view=http%3A%2F%2Fmm.dimu.no%2Fimage%2F022uL2kKLAUV%3Fdimension%3D800x800" alt="Photo of a stone">
-                  <figcaption class="orbit-caption">
-                    <span>aut quis est ex vobis homo quem si petierit filius suus panem, numquid lapidem porriget ei?</span>
-                    <span>Welcher ist unter euch Menschen, so ihn sein Sohn bittet um Brot, der ihm einen Stein biete?</span>
-                    <span>Matth. 7,9-10</span>
-                  </figcaption>
-                </a>
-              </figure>
-            </li>
-            <li class="orbit-slide">
-              <figure class="orbit-figure">
-                <a href="">
-                  <img class="orbit-image" src="https://proxy.europeana.eu/2048429/item_OSHKBSHCNZUMQEZBYNEO6V2Z3YHTONSN?api_url=https%3A%2F%2Fapi.europeana.eu%2Fapi&view=http%3A%2F%2Fresources.digicult-museen.net%2Fdam%2Fprovided_image%2Fm57d2fcaa33fcd" alt="Photo of a stone">
-                  <figcaption class="orbit-caption">
-                    <span class="greek">κρᾶτ᾽ ἐμὸν τόδ᾽ αὐτίκα πέτρᾳ πέτρας ἄνωθεν αἱμάξω πεσών</span>
-                    <span>Ich werde mir gleich den Kopf blutig am Felsen zerschlagen, wenn ich mich vom Felsen stürze</span>
-                    <span>Philoktet 1001f</span>
-                  </figcaption>
-                </a>
-              </figure>
-            </li>
-          </ul>
+      {% if article.images %}
+        <div class="cell small-12 large-9 images">
+          <div class="orbit" role="region" aria-label="Stone Samples" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+            <ul class="orbit-container">
+              {% for image in article.images %}
+                <li class="orbit-slide is-active">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="{{ SITEURL }}/images/{{ image[0] }}" alt="Photo of a stone">
+                    <figcaption class="orbit-caption">
+                      <span>{{ image[1] }}</span>
+                      <span><a href="{{ image[3] }}">{{ image[2] }}</a></span>
+                    </figcaption>
+                  </figure>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
         </div>
-      </div>
+      {% endif %}
     </div>
   </div>
   {% include '_footer.html' %}
