Link in the categories and tags overview pages

--- a/theme/src/theme.scss
+++ b/theme/src/theme.scss
@@ -25,6 +25,7 @@ a {
 @import 'snippet';
 @import 'logos';
 @import 'header';
+@import 'image_detail';
 
 /* Page-specific styles */
 @import 'landing';
