--- a/theme/templates/_header.html
+++ b/theme/templates/_header.html
@@ -4,9 +4,9 @@
       <li><a href="{{ SITEURL }}/">Stein&middot;reich</a></li>
     </ul>
     <ul class="cell small-12 medium-auto menu">
-      <li><a href="#">Raumplan</a></li>
-      <li><a href="#">Themen</a></li>
-      <li><a href="#">Entdecken</a></li>
+      <li><a href="{{ SITEURL }}">Raumplan</a></li>
+      <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
+      <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
     </ul>
   </nav>
 </header>
