--- a/theme/src/_logos.scss
+++ b/theme/src/_logos.scss
@@ -6,22 +6,33 @@
     display: flex;
     justify-content: space-between;
     background: $white;
+    overflow: hidden;
+    max-height: rem-calc(50);
+    transition: max-height 0.3s;
 
-    img {
-        max-height: rem-calc(50);
+    @include breakpoint(medium) {
+        max-height: rem-calc(75);
+    }
 
-        @include breakpoint(medium) {
-            max-height: rem-calc(75);
-        }
+    @include breakpoint(large) {
+        max-height: rem-calc(100);
+    }
 
-        @include breakpoint(large) {
-            max-height: rem-calc(100);
+    a {
+        display: block;
+
+        &:last-child {
+            text-align: right;
         }
     }
 
-    &.small {
-        img {
-            max-height: rem-calc(50);
-        }
+    img {
+        max-height: 100%;
+    }
+}
+
+.scrolling {
+    .logos {
+        max-height: rem-calc(50);
     }
 }
