Added tags and categories pages

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -12,14 +12,14 @@
         <h1 class="cell greek">πέτρα&middot;πλούσιος</h1>
         <ul class="cell menu">
           <li><a href="">Raumplan</a></li>
-          <li><a href="">Themen</a></li>
-          <li><a href="">Entdecken</a></li>
+          <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
+          <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
         </ul>
         <h1 class="cell">Stein&middot;reich</h1>
         <ul class="cell menu">
           <li><a href="">Raumplan</a></li>
-          <li><a href="">Themen</a></li>
-          <li><a href="">Entdecken</a></li>
+          <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
+          <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
         </ul>
         <h1 class="cell">lapis&middot;dives</h1>
       </div>
