--- a/theme/src/_settings.scss
+++ b/theme/src/_settings.scss
@@ -80,6 +80,8 @@ $medium-gray: #cacaca;
 $dark-gray: #666666;
 $black: #222222;
 $white: #fefefe;
+$red: #ab0073;
+$blue: #0021ff;
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Merriweather', serif;
