--- a/theme/templates/_footer.html
+++ b/theme/templates/_footer.html
@@ -1,4 +1,5 @@
-<footer class="logos">
-  <a href=""><img src="https://www.uni-leipzig.de/typo3conf/ext/mkunileipzig/Resources/Public/Images/Icons/uni_leipzig_logo_v2.svg" alt="Universität Leipzig"/></a>
-  <a href=""><img src="https://www.uni-halle.de/im/sod/common/img/signet_right.jpg" alt="Martin-Luther-Universität Halle-Wittenberg"/></a>
+<footer class="main">
+  <a href="{{ SITEURL }}/pages/impressum.html">Impressum</a>
+  <a href="{{ SITEURL }}/pages/datenschutzerklaerung.html">Datenschutz</a>
+  <a href="{{ SITEURL }}/pages/mitwirkende.html">Mitwirkende</a>
 </footer>
