--- a/theme/templates/_header.html
+++ b/theme/templates/_header.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="grid-x">
     <ul class="cell small-12 medium-shrink menu">
-      <li><a href="{{ SITEURL }}/">Stein&middot;reich</a></li>
+      <li><a href="{{ SITEURL }}/"><span class="fg-blue">Stein</span>&middot;<span class="fg-red">reich</span></a></li>
     </ul>
     <ul class="cell small-12 medium-auto menu">
       <li><a href="{{ SITEURL }}">Raumplan</a></li>
