--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -9,19 +9,19 @@
   <div class="grid-container">
     <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 grid-y">
-        <h1 class="cell greek"><span class="fg-blue">πέτρα</span>&middot;<span class="fg-red">πλούσιος</span></h1>
-        <ul class="cell menu">
+        <h1 class="cell greek width-auto"><span class="fg-blue">πέτρα</span>&middot;<span class="fg-red">πλούσιος</span></h1>
+        <ul class="cell menu width-auto">
           <li><a href="">Raumplan</a></li>
           <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
           <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
         </ul>
-        <h1 class="cell"><span class="fg-blue">Stein</span>&middot;<span class="fg-red">reich</span></h1>
-        <ul class="cell menu">
+        <h1 class="cell width-auto"><span class="fg-blue">Stein</span>&middot;<span class="fg-red">reich</span></h1>
+        <ul class="cell menu width-auto">
           <li><a href="">Raumplan</a></li>
           <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
           <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
         </ul>
-        <h1 class="cell"><span class="fg-blue">lapis</span>&middot;<span class="fg-red">dives</span></h1>
+        <h1 class="cell width-auto"><span class="fg-blue">lapis</span>&middot;<span class="fg-red">dives</span></h1>
       </div>
       <div class="cell small-12 medium-6">
         <div class="orbit snippet" role="region" aria-label="Stone Samples" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
