--- a/theme/templates/_footer.html
+++ b/theme/templates/_footer.html
@@ -2,4 +2,5 @@
   <a href="{{ SITEURL }}/pages/impressum.html">Impressum</a>
   <a href="{{ SITEURL }}/pages/datenschutzerklaerung.html">Datenschutz</a>
   <a href="{{ SITEURL }}/pages/mitwirkende.html">Mitwirkende</a>
+  <a href="{{ SITEURL }}/pages/quellen.html">Quellen</a>
 </footer>
