--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -11,11 +11,32 @@
     <div class="grid-x">
       <div class="cell small-12">
         <h1>{{ category }}</h1>
-        <ul>
-          {% for article in articles %}
-            <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
-          {% endfor %}
-        </ul>
+        <div class="grid-x hide-for-small">
+            <div class="cell medium-8 large-10">
+                <ul class="figure-list">
+                    {% for article in articles %}
+                        {% if article.tags %}
+                            <li>
+                                <a href="{{ SITEURL }}/{{ article.url }}">
+                                    <figure class="{{ article.tags|map(attribute='slug')|reject('==', category.slug)|join(' ') }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
+                                        <figcaption>{{ article.title }}</figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="cell medium-4 large-2">
+                <ul class="menu vertical label-list">
+                    {% for tag in articles|tag_set|sort(attribute='slug') %}
+                        {% if tag.slug != category.slug %}
+                            <li><a href="{{ SITEURL }}/{{ tag.url }}" class="{{ tag.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ tag }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
       </div>
     </div>
   </div>
@@ -23,5 +44,6 @@
   {% include '_base_scripts.html' %}
   {% include '_go_to_landing_script.html' %}
   {% include '_scrolling_script.html' %}
+  {% include '_explore_script.html' %}
 </body>
 {% endblock body %}
