--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -12,28 +12,33 @@
       <div class="cell small-12">
         <h1>Themen</h1>
         <div class="grid-x hide-for-small">
-            <div class="cell medium-8 large-10">
-                <ul class="figure-list">
-                    {% for article in articles %}
-                        {% if article.tags %}
-                            <li>
-                                <a href="{{ SITEURL }}/{{ article.url }}">
-                                    <figure class="{{ article.category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
-                                        <figcaption>{{ article.title }}</figcaption>
-                                    </figure>
-                                </a>
-                            </li>
+          <div class="cell medium-8 large-10">
+            <ul class="figure-list">
+              {% for article in articles %}
+                {% if article.tags %}
+                  <li>
+                    <a href="{{ SITEURL }}/{{ article.url }}">
+                      <figure class="{{ article.category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
+                        {% if article.images %}
+                          <picture>
+                            <img src="{{ SITEURL }}/images/{{ article.images[0][0] }}" />
+                          </picture>
                         {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="cell medium-4 large-2">
-                <ul class="menu vertical label-list">
-                    {% for (category, articles) in categories|sort(attribute='0.slug') %}
-                        <li><a href="{{ SITEURL }}/{{ category.url }}" class="{{ category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ category }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
+                        <figcaption>{{ article.title }}</figcaption>
+                      </figure>
+                    </a>
+                  </li>
+                {% endif %}
+              {% endfor %}
+            </ul>
+          </div>
+          <div class="cell medium-4 large-2">
+            <ul class="menu vertical label-list">
+              {% for (category, articles) in categories|sort(attribute='0.slug') %}
+                <li><a href="{{ SITEURL }}/{{ category.url }}" class="{{ category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ category }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
         </div>
       </div>
     </div>
