--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -12,30 +12,35 @@
       <div class="cell small-12">
         <h1>{{ category }}</h1>
         <div class="grid-x hide-for-small">
-            <div class="cell medium-8 large-10">
-                <ul class="figure-list">
-                    {% for article in articles %}
-                        {% if article.tags %}
-                            <li>
-                                <a href="{{ SITEURL }}/{{ article.url }}">
-                                    <figure class="{{ article.tags|map(attribute='slug')|reject('==', category.slug)|join(' ') }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
-                                        <figcaption>{{ article.title }}</figcaption>
-                                    </figure>
-                                </a>
-                            </li>
+          <div class="cell medium-8 large-10">
+            <ul class="figure-list">
+              {% for article in articles %}
+                {% if article.tags %}
+                  <li>
+                    <a href="{{ SITEURL }}/{{ article.url }}">
+                      <figure class="{{ article.tags|map(attribute='slug')|reject('==', category.slug)|join(' ') }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
+                        {% if article.images %}
+                          <picture>
+                            <img src="{{ SITEURL }}/images/{{ article.images[0][0] }}" />
+                          </picture>
                         {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="cell medium-4 large-2">
-                <ul class="menu vertical label-list">
-                    {% for tag in articles|tag_set|sort(attribute='slug') %}
-                        {% if tag.slug != category.slug %}
-                            <li><a href="{{ SITEURL }}/{{ tag.url }}" class="{{ tag.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ tag }}</a></li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
+                        <figcaption>{{ article.title }}</figcaption>
+                      </figure>
+                    </a>
+                  </li>
+                {% endif %}
+              {% endfor %}
+            </ul>
+          </div>
+          <div class="cell medium-4 large-2">
+            <ul class="menu vertical label-list">
+              {% for tag in articles|tag_set|sort(attribute='slug') %}
+                {% if tag.slug != category.slug %}
+                  <li><a href="{{ SITEURL }}/{{ tag.url }}" class="{{ tag.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ tag }}</a></li>
+                {% endif %}
+              {% endfor %}
+            </ul>
+          </div>
         </div>
       </div>
     </div>
