--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -21,7 +21,7 @@
                       <figure class="{{ article.tags|map(attribute='slug')|join(' ') }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
                         {% if article.images %}
                           <picture>
-                            <img src="{{ SITEURL }}/images/{{ article.images[0][0] }}" />
+                            <img src="{{ SITEURL }}/{{ article.images[0].thumbnail }}" />
                           </picture>
                         {% endif %}
                         <figcaption>{{ article.title }}</figcaption>
