Cleaned up the static image generation

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -31,9 +31,9 @@
                 <li class="orbit-slide is-active">
                   <figure class="orbit-figure">
                     <picture>
-                      <source media="(min-width: 1024px)" srcset="{{ SITEURL }}/{{ image.full }}" />
-                      <source media="(min-width: 640px)" srcset="{{ SITEURL }}/{{ image.medium }}" />
-                      <img class="orbit-image" src="{{ SITEURL }}/{{ image.small }}" alt="Photo of a stone">
+                      <source media="(min-width: 1024px)" srcset="{{ SITEURL }}/{{ image.full.url }}" />
+                      <source media="(min-width: 640px)" srcset="{{ SITEURL }}/{{ image.medium.url }}" />
+                      <img class="orbit-image" src="{{ SITEURL }}/{{ image.small.url }}" alt="Photo of a stone">
                     </picture>
                     <figcaption class="orbit-caption">
                       <span>{{ image[1] }}</span>
